fixed system tests
Signed-off-by: shazaaldawamneh <shaza.aldawamneh@hotmail.com>